--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^2.0.0",
     "typescript": "~3.9.3"
   }
 }
