--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint",
     "analyze": "vue-cli-service build --report"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "core-js": "^3.6.5",
     "epubjs": "^0.3.84",
@@ -18,6 +23,8 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-angular": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -32,6 +39,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "husky": "^5.1.3",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^7.1.0",
