--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "src/**/*.js": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -25,6 +28,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-angular": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -40,6 +44,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "husky": "^5.1.3",
+    "lint-staged": "^10.5.4",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^7.1.0",
