--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "husky": {
     "hooks": {
+      "commit-msg": "commitlint -e $GIT_PARAMS",
       "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "src/**/*.js": "prettier --write --ignore-unknown"
+    "*.{js,vue}": "eslint",
+    "*.{css,vue}": "stylelint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -26,9 +28,8 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-angular": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -43,12 +44,14 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
-    "husky": "^5.1.3",
+    "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^2.0.0",
-    "typescript": "~3.9.3"
+    "typescript": "~3.9.3",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0"
   }
 }
